# AutoPlayMusic

./: .gitignore  CMakeLists.txt  README.md
src/: folder.cpp  folder.hpp  main.cpp  play.cpp  play.hpp  rng.cpp  rng.hpp
